# dev-gpt

./: .gitignore  README.md  pyproject.toml  start.py
agent/: __init__.py  check_plan.py  check_task.py  inquire.py  message.py  plan.py  qa.py  think.py
config/: project_config.py
context/: __init__.py  project_context.py
llm/: gpt.py  llm.py
message/: console_message.py  console_message_manager.py  message.py  message_manager.py  web_socket_message.py  web_socket_message_manager.py
prompt/: prompt.py
requirement/: task_planner.py  user_requirement_handler.py
skill/: code_interpreter.py  create_menu.py  learn.py  make_plan.py  skill.py  skill_manager.py  think.py  web_analytics.py
skill/interrupt_skill/: inquire.py  interrupt_skill.py  run_code.py  write_code.py
skill/list/: code_interpreter.py  create_menu.py  inquire.py  interrupt_skill.py  learn.py  make_plan.py  run_code.py  skill.py  think.py  web_analytics.py  write_code.py
