[tool.poetry]
name = "dev-gpt"
version = "0.1.0"
description = ""
authors = ["jxy <2733167316@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.299"
openai = "^0.28.0"
open-interpreter = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
